--- a/server/.godot/editor/project_metadata.cfg
+++ b/server/.godot/editor/project_metadata.cfg
@@ -10,6 +10,7 @@ scripts=["res://NetworkingServer.gd"]
 [dialog_bounds]
 
 export=Rect2(2560, 23, 3440, 1369)
+create_new_node=Rect2(510, 190, 900, 700)
 
 [export_options]
 
