--- a/server/.godot/editor/editor_layout.cfg
+++ b/server/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Certificate/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Certificate/server_Cert.crt")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Certificate/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,14 +28,14 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://NetworkingServer.tscn")
 current_scene="res://NetworkingServer.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://NetworkingServer.gd"]
-selected_script="res://NetworkingServer.gd"
+open_scripts=["res://generateCert.gd", "res://NetworkingServer.gd"]
+selected_script="res://generateCert.gd"
 open_help=[]
 script_split_offset=150
 list_split_offset=0
