--- a/server/export_presets.cfg
+++ b/server/export_presets.cfg
@@ -188,7 +188,7 @@ customized_files={
 }
 include_filter=""
 exclude_filter=""
-export_path="../../Server/LinuxDedicatedServer.x86_64"
+export_path="../../export/wss.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
