--- a/server/.godot/editor/editor_layout.cfg
+++ b/server/.godot/editor/editor_layout.cfg
@@ -30,12 +30,12 @@ current_scene="res://NetworkingServer.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://generateCert.gd", "res://NetworkingServer.gd"]
-selected_script="res://generateCert.gd"
+selected_script="res://NetworkingServer.gd"
 open_help=[]
 script_split_offset=150
 list_split_offset=0
