--- a/server/.godot/editor/project_metadata.cfg
+++ b/server/.godot/editor/project_metadata.cfg
@@ -9,13 +9,13 @@ scripts=["res://generateCert.gd", "res://NetworkingServer.gd"]
 
 [dialog_bounds]
 
-export=Rect2(2560, 23, 3440, 1369)
+export=Rect2(-152, 59, 1920, 1032)
 create_new_node=Rect2(510, 190, 900, 700)
 project_settings=Rect2(360, 190, 1200, 700)
 
 [export_options]
 
-default_filename="server"
+default_filename="wss"
 
 [script_setup]
 
