--- a/server/.godot/editor/script_editor_cache.cfg
+++ b/server/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 8.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 18,
-"selection_to_column": 40,
-"selection_to_line": 24,
+"row": 22,
+"scroll_position": 9.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -25,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 21,
-"scroll_position": 18.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
