--- a/client/export_presets.cfg
+++ b/client/export_presets.cfg
@@ -9,9 +9,11 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../index.html"
+export_path="../../html5/index.html"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
@@ -29,8 +31,8 @@ html/custom_html_shell=""
 html/head_include=""
 html/canvas_resize_policy=2
 html/focus_canvas_on_start=true
-html/experimental_virtual_keyboard=false
-progressive_web_app/enabled=false
+html/experimental_virtual_keyboard=true
+progressive_web_app/enabled=true
 progressive_web_app/ensure_cross_origin_isolation_headers=true
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
