--- a/server/.godot/editor/editor_layout.cfg
+++ b/server/.godot/editor/editor_layout.cfg
@@ -19,6 +19,9 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Certificate/server_Cert.crt")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Certificate/")
+dock_node_current_tab=0
+dock_history_include_scene=true
+dock_history_include_global=true
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,7 +33,7 @@ current_scene="res://NetworkingServer.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
@@ -47,3 +50,14 @@ open_shaders=[]
 split_offset=0
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[EditorWindow]
+
+screen=0
+mode="maximized"
+position=Vector2i(0, 23)
+
+[GameView]
+
+floating_window_rect=Rect2i(0, 0, 0, 0)
+floating_window_screen=-1
